@@ -1,41 +1,45 @@
 /*
-    The book project lets a user keep track of different books they would like to read, are currently
-    reading, have read or did not finish.
-    Copyright (C) 2020  Karan Kumar
+ * The book project lets a user keep track of different books they would like to read, are currently
+ * reading, have read or did not finish.
+ * Copyright (C) 2020  Karan Kumar
 
-    This program is free software: you can redistribute it and/or modify it under the terms of the
-    GNU General Public License as published by the Free Software Foundation, either version 3 of the
-    License, or (at your option) any later version.
+ * This program is free software: you can redistribute it and/or modify it under the terms of the
+ * GNU General Public License as published by the Free Software Foundation, either version 3 of the
+ * License, or (at your option) any later version.
 
-    This program is distributed in the hope that it will be useful, but WITHOUT ANY
-    WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
-    PURPOSE.  See the GNU General Public License for more details.
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR
+ * PURPOSE.  See the GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License along with this program.
-    If not, see <https://www.gnu.org/licenses/>.
+ * You should have received a copy of the GNU General Public License along with this program.
+ * If not, see <https://www.gnu.org/licenses/>.
  */
 
 package com.karankumar.bookproject.backend.service;
 
 import com.karankumar.bookproject.annotations.IntegrationTest;
 import com.karankumar.bookproject.backend.entity.Tag;
-import com.karankumar.bookproject.backend.utils.PredefinedShelfUtils;
-import com.karankumar.bookproject.backend.entity.Author;	
-import com.karankumar.bookproject.backend.entity.Book;	
-import com.karankumar.bookproject.backend.entity.BookGenre;	
-import com.karankumar.bookproject.backend.entity.CustomShelf;	
-import com.karankumar.bookproject.backend.entity.PredefinedShelf;	
+import com.karankumar.bookproject.backend.entity.Author;
+import com.karankumar.bookproject.backend.entity.Book;
+import com.karankumar.bookproject.backend.entity.BookGenre;
+import com.karankumar.bookproject.backend.entity.BookFormat;
+import com.karankumar.bookproject.backend.entity.CustomShelf;
+import com.karankumar.bookproject.backend.entity.PredefinedShelf;
 import com.karankumar.bookproject.backend.entity.RatingScale;
 import org.apache.commons.io.FileUtils;
-import static org.assertj.core.api.Assertions.assertThat;
-import org.assertj.core.api.SoftAssertions;
+
+import static com.karankumar.bookproject.backend.entity.PredefinedShelf.ShelfName.TO_READ;
+
 import org.json.JSONException;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assumptions.assumeThat;
+import static org.assertj.core.api.SoftAssertions.assertSoftly;
+
 import org.skyscreamer.jsonassert.JSONAssert;
 import org.skyscreamer.jsonassert.JSONCompareMode;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -45,99 +49,104 @@ import org.springframework.transaction.annotation.Transactional;
 import java.io.File;
 import java.io.IOException;
 import java.time.LocalDate;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
 @IntegrationTest
+@DisplayName("BookService should")
 class BookServiceTest {
-    @Autowired private AuthorService authorService;
-    @Autowired private BookService bookService;
-    @Autowired private CustomShelfService customShelfService;
-    @Autowired private TagService tagService;
+    private final AuthorService authorService;
+    private final BookService bookService;
+    private final CustomShelfService customShelfService;
+    private final TagService tagService;
+    private final PredefinedShelfService predefinedShelfService;
 
-    private Book validBook;
-    private static PredefinedShelf toRead;
-    private Author author;
+    private PredefinedShelf toRead;
+    private final Author author = new Author("Test First Name", "Test Last Name");
 
-    @BeforeAll
-    public static void beforeAllSetup(@Autowired PredefinedShelfService predefinedShelfService) {
-        toRead = predefinedShelfService.findByPredefinedShelfName(PredefinedShelf.ShelfName.TO_READ);
+    @Autowired
+    BookServiceTest(AuthorService authorService, BookService bookService,
+                    CustomShelfService customShelfService, TagService tagService,
+                    PredefinedShelfService predefinedShelfService) {
+        this.authorService = authorService;
+        this.bookService = bookService;
+        this.customShelfService = customShelfService;
+        this.tagService = tagService;
+        this.predefinedShelfService = predefinedShelfService;
     }
 
     @BeforeEach
-    public void setup() {
+    public void setUp() {
         resetServices();
-        resetAuthorAndBook();
+        toRead = predefinedShelfService.findByPredefinedShelfNameAndLoggedInUser(TO_READ);
     }
 
-    private void resetAuthorAndBook() {
-        author = new Author("Test First Name", "Test Last Name");
-        validBook = new Book("Book Name", author, toRead);
+    private Book.BookBuilder validBook() {
+        return Book.builder()
+                   .title("Book Name")
+                   .author(author)
+                   .predefinedShelf(toRead);
     }
 
     private void resetServices() {
         bookService.deleteAll();
         authorService.deleteAll();
         customShelfService.deleteAll();
-        tagService.deleteAll();
     }
 
     @Test
-    void nullBookNotSaved() {
-        bookService.save(null);
-        assertThat(bookService.count()).isZero();
+    @DisplayName("throw an exception when there is an attempt to save a null book")
+    void throwExceptionWhenSavingANullBook() {
+        assertThatExceptionOfType(NullPointerException.class)
+                .isThrownBy(() -> bookService.save(null));
     }
 
     @Test
-    void bookWithoutAuthorNotSaved() {
-        SoftAssertions softly = new SoftAssertions();
+    void notSaveBookWithoutAuthor() {
+        // given
+        Book bookWithoutAuthor = validBook().author(null)
+                                            .build();
 
         // when
-        bookService.save(new Book("Book without author", null, toRead));
+        bookService.save(bookWithoutAuthor);
 
         // then
-        softly.assertThat(authorService.count()).isZero();
-        softly.assertThat(bookService.count()).isZero();
-        softly.assertAll();
+        assertSoftly(softly -> {
+            softly.assertThat(authorService.count()).isZero();
+            softly.assertThat(bookService.count()).isZero();
+        });
     }
 
     @Test
-    @DisplayName("Tests book with numberOfPages > max_pages is not saved")
-    void bookWithMaxNumberOfPagesExceededNotSaved() {
-        SoftAssertions softly = new SoftAssertions();
-
+    @DisplayName("not save a book that exceeds the max number of pages allowed")
+    void notSaveBookWithMaxNumberOfPagesExceeded() {
         // given
-        Book book = new Book("Book without author", new Author("First", "Last"), toRead);
-        book.setNumberOfPages(Book.MAX_PAGES + 1);
+        Book book = validBook().pagesRead(Book.MAX_PAGES + 1)
+                               .build();
 
         // when and then
-        softly.assertThatThrownBy(() -> bookService.save(book))
-              .isInstanceOf(TransactionSystemException.class);
-        softly.assertThat(bookService.count()).isZero();
-        softly.assertAll();
+        assertSoftly(softly -> {
+            softly.assertThatThrownBy(() -> bookService.save(book))
+                  .isInstanceOf(TransactionSystemException.class);
+            softly.assertThat(bookService.count()).isZero();
+        });
     }
 
     @Test
-    void bookOutsidePageLimitNotSaved() {
-        SoftAssertions softly = new SoftAssertions();
-
-        // given
-        Book book = new Book("Book without author", new Author("First", "Last"), toRead);
-        book.setPagesRead(Book.MAX_PAGES + 1);
-
-        // when and then
-        softly.assertThatThrownBy(() -> bookService.save(book))
-              .isInstanceOf(TransactionSystemException.class);
-        softly.assertThat(bookService.count()).isZero();
-        softly.assertAll();
+    @DisplayName("throw an exception when there is an attempt to delete a null book")
+    void throwExceptionWhenDeletingANullBook() {
+        assertThatExceptionOfType(NullPointerException.class)
+                .isThrownBy(() -> bookService.delete(null));
     }
 
     @Test
-    void bookWithinPageLimitIsSaved() {
+    void saveBookWithinPageLimit() {
         // given
-        Book book = new Book("Book without author", new Author("First", "Last"), toRead);
-        book.setPagesRead(Book.MAX_PAGES);
-        book.setNumberOfPages(Book.MAX_PAGES);
+        Book book = validBook().pagesRead(Book.MAX_PAGES)
+                               .numberOfPages(Book.MAX_PAGES)
+                               .build();
 
         // when
         bookService.save(book);
@@ -147,28 +156,26 @@ class BookServiceTest {
     }
 
     @Test
-    void bookWithoutPredefinedShelfNotSaved() {
-        SoftAssertions softly = new SoftAssertions();
-
+    void notSaveBookWithoutPredefinedShelf() {
         // given
-        Book bookWithoutShelf = new Book("Title", new Author("First", "Last"), null);
+        Book bookWithoutShelf = validBook().predefinedShelf(null)
+                                           .build();
 
         // when
         bookService.save(bookWithoutShelf);
 
         // then
-        softly.assertThat(authorService.count()).isZero();
-        softly.assertThat(bookService.count()).isZero();
-        softly.assertAll();
+        assertSoftly(softly -> {
+            softly.assertThat(authorService.count()).isZero();
+            softly.assertThat(bookService.count()).isZero();
+        });
     }
 
     @Test
-    @DisplayName("Book with author and predefined shelf can be saved")
-    void validBookSaved() {
-        SoftAssertions softly = new SoftAssertions();
-
+    void saveValidBook() {
         // given
-        assertThat(bookService.count()).isZero();
+        assumeThat(bookService.count()).isZero();
+        Book validBook = validBook().build();
 
         // when
         bookService.save(validBook);
@@ -176,27 +183,50 @@ class BookServiceTest {
         // then
         List<Book> filteredByTitle = bookService.findAll(validBook.getTitle());
 
-        softly.assertThat(bookService.count()).isOne();
-        softly.assertThat(bookService.findAll(validBook.getTitle()).size()).isOne();
-        softly.assertThat(filteredByTitle).first().isEqualTo(validBook);
-        softly.assertAll();
+        assertSoftly(softly -> {
+            softly.assertThat(bookService.count()).isOne();
+            softly.assertThat(bookService.findAll(validBook.getTitle()).size()).isOne();
+            softly.assertThat(filteredByTitle).first().isEqualTo(validBook);
+        });
     }
 
     @Test
-    void allBooksReturnedWhenFilterIsEmpty() {
-        assertEquals(bookService.findAll(), bookService.findAll(""));
-    }
-
-    @Test
-    void allBooksReturnedWhenFilterIsNull() {
-        assertEquals(bookService.findAll(), bookService.findAll(null));
-    }
-
-    @Test
-    void shouldCreateJsonRepresentationForBooks() throws IOException, JSONException {
+    void returnAllBooksWhenFilterIsEmpty() {
         // given
-        Book anotherValidBook = createBookAndSetAllAttributes();
-        bookService.save(validBook);
+        assumeThat(bookService.count()).isZero();
+        Book book1 = validBook().build();
+        bookService.save(book1);
+        Book book2 = validBook().build();
+        bookService.save(book2);
+
+        // when
+        List<Book> actual = bookService.findAll("");
+
+        // then
+        assertThat(actual).hasSize(2);
+    }
+
+    @Test
+    void returnAllBooksWhenFilterIsNull() {
+        // given
+        assumeThat(bookService.count()).isZero();
+        Book book1 = validBook().build();
+        bookService.save(book1);
+        Book book2 = validBook().build();
+        bookService.save(book2);
+
+        // when
+        List<Book> actual = bookService.findAll(null);
+
+        // then
+        assertThat(actual).hasSize(2);
+    }
+
+    @Test
+    void createJsonRepresentationForBooks() throws IOException, JSONException {
+        // given
+        bookService.save(validBook().build());
+        Book anotherValidBook = createBookWithAllAttributes().build();
         bookService.save(anotherValidBook);
 
         String expectedJsonString = FileUtils.readFileToString(
@@ -206,44 +236,55 @@ class BookServiceTest {
         String actualJsonString = bookService.getJsonRepresentationForBooksAsString();
 
         // then
-        JSONAssert.assertEquals(expectedJsonString, actualJsonString, JSONCompareMode.NON_EXTENSIBLE);
+        JSONAssert.assertEquals(
+                expectedJsonString, actualJsonString, JSONCompareMode.NON_EXTENSIBLE
+        );
     }
 
     @Test
     @Transactional
     void findSavedBook() {
-        Book bookToSave = new Book("Book Name To Save", author, toRead);
+        // given
+        Book bookToSave = validBook().build();
+
+        // when
         bookService.save(bookToSave);
-        assertEquals(bookService.findById(bookToSave.getId()),bookToSave);
+
+        // then
+        assertThat(bookService.findById(bookToSave.getId())).isEqualTo(bookToSave);
     }
 
-    private Book createBookAndSetAllAttributes() {
-        CustomShelf customShelf = new CustomShelf("My Shelf");
-        customShelfService.save(customShelf);
+    private Book.BookBuilder createBookWithAllAttributes() {
+        return validBook()
+                .title("Another Book Name")
+                .numberOfPages(420)
+                .pagesRead(42)
+                .bookGenre(BookGenre.ADVENTURE)
+                .bookFormat(BookFormat.PAPERBACK)
+                .seriesPosition(3)
+                .edition(2)
+                .bookRecommendedBy("Peter Parker")
+                .isbn("9780151010264")
+                .yearOfPublication(2014)
+                .customShelf(createAndSaveCustomShelf())
+                .tags(createAndSaveTags())
+                .rating(RatingScale.EIGHT)
+                .dateStartedReading(LocalDate.of(2020, 7, 5))
+                .dateFinishedReading(LocalDate.of(2020, 9, 5))
+                .bookReview("Very good.");
+    }
 
+    private CustomShelf createAndSaveCustomShelf() {
+        CustomShelf customShelf = customShelfService.createCustomShelf("My Shelf");
+        customShelfService.save(customShelf);
+        return customShelf;
+    }
+
+    private Set<Tag> createAndSaveTags() {
         Tag tag1 = new Tag("book");
         Tag tag2 = new Tag("adventure");
         tagService.save(tag1);
         tagService.save(tag2);
-
-        Book book = new Book("Another Book Name", author, toRead);
-        book.setNumberOfPages(420);
-        book.setPagesRead(42);
-        book.setBookGenre(BookGenre.ADVENTURE);
-        book.setSeriesPosition(3);
-        book.setEdition(2);
-        book.setBookRecommendedBy("Peter Parker");
-        book.setCustomShelf(customShelf);
-        book.setTags(Set.of(tag1, tag2));
-        book.setRating(RatingScale.EIGHT);
-        book.setDateStartedReading(LocalDate.of(2020, 7, 5));
-        book.setDateFinishedReading(LocalDate.of(2020, 9, 5));
-        book.setBookReview("Very good.");
-        return book;
-    }
-
-    @AfterEach
-    void deleteBooks() {
-        bookService.deleteAll();
+        return new HashSet<>(Arrays.asList(tag1, tag2));
     }
 }
